Fix scroll over input on iOS

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -12,7 +12,6 @@ body {
   -ms-user-select: none;
   user-select: none;
   -webkit-touch-callout: none !important;
-  -webkit-overflow-scrolling: touch;
 }
 
 input {
